--- a/scripts/install
+++ b/scripts/install
@@ -48,20 +48,22 @@ declare -a ARCH_FLATPAKS=(
 declare -a ARCH_PKGS=(
     # Desktop
     "xdg-desktop-portal-gnome" "niri" "matugen" "dms-shell-bin" "dsearch-bin" "xwayland-satellite"
-    "resources" "loupe" "showtime" "decibels" "gcolor3" "gnome-tweaks"
+    # Apps
+    "resources" "loupe" "showtime" "decibels" "gcolor3" "gnome-tweaks" "ghostty" "zen-browser-bin" "android-studio"
     # Theme
     "adw-gtk-theme" "morewaita-icon-theme"
     # CLI
-    "ffmpeg" "zoxide" "bat" "eza" "fastfetch" "less" "yq" "jq" "wl-clipboard" "tealdeer"
-    "zsh" "ghostty" "neovim" "oh-my-posh-bin" "zsh-autosuggestions" "zsh-syntax-highlighting"
+    "ffmpeg" "zoxide" "bat" "eza" "fastfetch" "less" "yq" "jq" "wl-clipboard" "tealdeer" "neovim"
+    # Shell
+    "zsh" "oh-my-posh-bin" "zsh-autosuggestions" "zsh-syntax-highlighting"
     # Fonts
-    "ttf-fira-code" "ttf-meslo-nerd" "ttf-nunito"
+    "ttf-fira-code" "ttf-meslo-nerd" "ttf-nunito" "noto-fonts" "noto-fonts-extra" "noto-fonts-cjk" "ttf-twemoji" "adwaita-fonts" "inter-font" "fonts-kalam"
     # Gaming
     "gamemode" "mangohud" "steam"
     # Chat
     "discord" "betterdiscordctl" "beeper-v4-bin" "stoat-desktop-bin" "telegram-desktop"
     # Misc
-    "flatpak" "syncthing" "ffmpegthumbnailer" "nodejs" "zen-browser-bin" "android-studio"
+    "flatpak" "syncthing" "ffmpegthumbnailer" "nodejs"
 )
 
 usage() {
@@ -193,14 +195,14 @@ install_thumbnailers() {
     # Create folder if it doesn't exist
     sudo mkdir -p /usr/share/thumbnailers/
 
-    sudo ln -sf --target-directory="/usr/share/thumbnailers/" "$(readlink --canonicalize ../thumbnailers/kra.thumbnailer)" /usr/share/thumbnailers/kra.thumbnailer
-    sudo ln -sf --target-directory="/usr/share/thumbnailers/" "$(readlink --canonicalize ../thumbnailers/pxo.thumbnailer)" /usr/share/thumbnailers/pxo.thumbnailer
+    sudo ln -sf "$(readlink --canonicalize ../thumbnailers/kra.thumbnailer)" /usr/share/thumbnailers/kra.thumbnailer
+    sudo ln -sf "$(readlink --canonicalize ../thumbnailers/pxo.thumbnailer)" /usr/share/thumbnailers/pxo.thumbnailer
 }
 
 niri_config() {
-    ln -sf --target-directory="$HOME/.config" "$(readlink --canonicalize ../niri)" "$HOME/.config/niri"
-    ln -sf --target-directory="$HOME/.config" "$(readlink --canonicalize ../dms)" "$HOME/.config/DankMaterialShell"
-    ln -sf --target-directory="$HOME/.config" "$(readlink --canonicalize ../danksearch)" "$HOME/.config/danksearch"
+    ln -sf "$(readlink --canonicalize ../niri)" "$HOME/.config/niri"
+    ln -sf "$(readlink --canonicalize ../dms)" "$HOME/.config/DankMaterialShell"
+    ln -sf "$(readlink --canonicalize ../danksearch)" "$HOME/.config/danksearch"
     
     # Set a default wallpaper if none is set
     if [[ $(dms ipc wallpaper get) != *"dotfiles"* ]]; then
@@ -221,18 +223,18 @@ niri_config() {
 }
 
 terminal_config() {
-    ln -sf --target-directory="$HOME/.config" "$(readlink --canonicalize ../.zshrc)" "$HOME/.zshrc"
-    ln -sf --target-directory="$HOME/.config" "$(readlink --canonicalize ../oh-my-posh)" "$HOME/.config/oh-my-posh"
-    ln -sf --target-directory="$HOME/.config" "$(readlink --canonicalize ../ghostty)" "$HOME/.config/ghostty"
+    ln -sf "$(readlink --canonicalize ../.zshrc)" "$HOME/.zshrc"
+    ln -sf "$(readlink --canonicalize ../oh-my-posh)" "$HOME/.config/oh-my-posh"
+    ln -sf "$(readlink --canonicalize ../ghostty)" "$HOME/.config/ghostty"
 }
 
 nvim_config() {
-    ln -sf --target-directory="$HOME/.config" "$(readlink --canonicalize ../nvim)" "$HOME/.config/nvim"
+    ln -sf "$(readlink --canonicalize ../nvim)" "$HOME/.config/nvim"
 }
 
 misc_config() {
-    ln -sf --target-directory="$HOME/.config" "$(readlink --canonicalize ../fastfetch)" "$HOME/.config/fastfetch"
-    ln -sf --target-directory="$HOME/.config" "$(readlink --canonicalize ../MangoHud)" "$HOME/.config/MangoHud"
+    ln -sf "$(readlink --canonicalize ../fastfetch)" "$HOME/.config/fastfetch"
+    ln -sf "$(readlink --canonicalize ../MangoHud)" "$HOME/.config/MangoHud"
 }
 
 arch() {
